--- a/src/styles/globals.css
+++ b/src/styles/globals.css
@@ -343,6 +343,7 @@ nav.navbar.scrolled {
 .banner {
   margin-top: 0;
   padding: 220px 0 60px 0; /* Adjust padding for smaller screens */
+  background: linear-gradient(90.21deg, #aa367c -5.91%, #4a2fbd 111.58%);
   background-image: url("../assets/img/banner-bg.png");
   background-position: top center;
   background-size: cover;
@@ -642,7 +643,13 @@ nav.navbar.scrolled {
   border: 1px solid rgba(255, 255, 255, 0.5);
   border-radius: 0 55px 55px 0;
 }
-
+.project-img {
+  animation: updown 5s linear infinite;
+  /* border-radius: 30px; */
+  width: 100%;
+  height: 400px;
+}
+/* .project-img:hover{} */
 @keyframes updown {
   0% {
     transform: translateY(-12px);
@@ -654,6 +661,7 @@ nav.navbar.scrolled {
     transform: translateY(-12px);
   }
 }
+
 .proj-imgbx {
   position: relative;
   border-radius: 30px;
@@ -663,21 +671,28 @@ nav.navbar.scrolled {
   justify-content: "center";
   align-items: "center";
   border-bottom: 5px solid white;
-  box-shadow: 5px 3px 0px white;
-  /* border-radius: 20% 40% 10% 30%; */
-  /* animation: updown 3s linear infinite; */
+  /* box-shadow: 5px 2px 3px white; */
+  background: linear-gradient(90.21deg, #58113c -5.91%, #1f1063 111.58%);
+  /* width: 300px; */
+  width: 100%;
+  height: 400px;
+  display: flex;
+  justify-content: center;
+  align-items: center;
 }
 .proj-imgbx::before {
   content: "";
-  background: linear-gradient(90.21deg, #aa367c -5.91%, #4a2fbd 111.58%);
+  background: linear-gradient(90.21deg, #70184d -5.91%, #2b1880 111.58%);
   opacity: 0.85;
   position: absolute;
   width: 100%;
   height: 0;
   transition: 0.4s ease-in-out;
 }
+
 .proj-imgbx:hover::before {
   height: 100%;
+  /* filter: blur(5px); */
 }
 .proj-txtx {
   position: absolute;
@@ -688,10 +703,19 @@ nav.navbar.scrolled {
   transition: 0.5s ease-in-out;
   opacity: 0;
   width: 100%;
+  height: 100%;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
 }
 .proj-imgbx:hover .proj-txtx {
   top: 50%;
-  opacity: 1;
+  opacity: 0.6;
+  backdrop-filter: blu(3px);
+  background: linear-gradient(90.21deg, #aa367c -5.91%, #4a2fbd 111.58%);
+  opacity: 0.85;
+  height: 100%;
 }
 .proj-txtx h4 {
   font-size: 30px;
