--- a/src/styles/globals.css
+++ b/src/styles/globals.css
@@ -15,6 +15,15 @@
   font-weight: 400;
 }
 
+/* ********** Variables ********* */
+:root {
+  --bg-primary: linear-gradient(
+    90deg,
+    rgba(170, 54, 124, 0.5),
+    rgba(74, 47, 189, 0.5)
+  );
+}
+
 /************ Default Css ************/
 * {
   margin: 0;
@@ -395,7 +404,7 @@ nav.navbar.scrolled {
 }
 
 .banner p {
-  color: #b8b8b8;
+  color: #e4e4e4;
   font-size: 16px;
   letter-spacing: 0.8px;
   line-height: 1.5em;
@@ -480,92 +489,6 @@ nav.navbar.scrolled {
   }
   .banner button {
     font-size: 24px;
-  }
-}
-/************ Our Service (on Home Page) Css ************/
-/* .divider .divider-black {
-  border-bottom: 1px solid #121212;
-}
-
-.divider .divider-white {
-  border-bottom: 1px solid #f8f8f8;
-} */
-
-.services {
-  padding: 30px 0 50px;
-  position: relative;
-  background: linear-gradient(
-    90deg,
-    rgba(170, 54, 124, 0.5),
-    rgba(74, 47, 189, 0.5)
-  );
-  /* border-bottom: 10px solid rgb(0, 0, 0); */
-}
-
-.services h2 {
-  font-size: 40px;
-  font-weight: 700;
-  text-align: center;
-}
-
-.services p {
-  color: #b8b8b8;
-  font-size: 18px;
-  letter-spacing: 0.8px;
-  line-height: 1.5em;
-  margin: 10px auto;
-  text-align: center;
-  width: 70%;
-}
-.service-card button {
-  background: linear-gradient(90.21deg, #aa367c -5.91%, #4a2fbd 111.58%);
-  color: #fff;
-  font-weight: 700;
-  font-size: 18px;
-  letter-spacing: 0.8px;
-  width: 100%;
-}
-.service-card .image {
-  width: 100%;
-  height: 220px;
-}
-.service-card {
-  transition: all ease 0.32s;
-  /* border-radius: 40px; */
-}
-.service-card:hover {
-  opacity: 0.7;
-}
-
-/* Responsive adjustments */
-@media (max-width: 1023px) {
-  .services {
-    padding: 20px 0;
-  }
-
-  .service-card {
-    font-size: 18px;
-  }
-  .services p {
-    width: 80%;
-    /* margin-bottom: 10px; */
-    margin: 10px auto;
-    text-align: center;
-  }
-}
-@media (max-width: 767px) {
-  .services {
-    padding: 20px 0;
-  }
-
-  .service-card {
-    font-size: 18px;
-  }
-  .services p {
-    width: 95%;
-    /* margin-bottom: 10px; */
-    margin: 10px auto;
-    text-align: start;
   }
 }
 
