--- a/src/styles/Services.module.css
+++ b/src/styles/Services.module.css
@@ -29,10 +29,8 @@
 }
 
 /* ------ Our Services -----*/
-.services {
-  padding: 30px 0 50px;
-}
-.services {
+
+.approaches {
   padding: 30px 0 50px;
   position: relative;
   background: linear-gradient(
@@ -42,13 +40,13 @@
   );
 }
 
-.services h2 {
+.approaches h2 {
   font-size: 40px;
   font-weight: 700;
   text-align: center;
 }
 
-.services p {
+.approaches p {
   color: #b8b8b8;
   font-size: 18px;
   letter-spacing: 0.8px;
@@ -60,10 +58,10 @@
 
 /* Responsive adjustments */
 @media (max-width: 1023px) {
-  .services {
+  .approaches {
     padding: 20px 0;
   }
-  .services p {
+  .approaches p {
     width: 80%;
     margin: 10px auto;
     text-align: center;
@@ -71,11 +69,11 @@
 }
 
 @media (max-width: 767px) {
-  .services {
+  .approaches {
     padding: 20px 0;
   }
 
-  .services p {
+  .approaches p {
     width: 95%;
     margin: 10px auto;
     text-align: start;
@@ -84,12 +82,12 @@
 
 /**** Our Services Card ****/
 
-.our_service_card_wrapper {
+.approaches_card_wrapper {
   display: flex;
   justify-content: center;
   align-items: center;
 }
-.our_service_card {
+.approaches_card {
   display: flex;
   flex-direction: column;
   align-items: center;
@@ -100,20 +98,20 @@
   border-radius: 10px;
   background: var(--bg-primary);
 }
-.our_service_card .img_wrapper {
+.approaches_card .img_wrapper {
   width: 60px;
   height: 50px;
   overflow: hidden;
   border-radius: 5px;
 }
-.our_service_card .img {
+.approaches_card .img {
   width: 100%;
   height: 100%;
   object-fit: cover;
   border-radius: 5px;
   margin-bottom: 10px;
 }
-.our_service_card h2 {
+.approaches_card h2 {
   font-size: 24px;
   font-weight: 500;
   margin: 15px 0 0;
@@ -121,17 +119,16 @@
   letter-spacing: 1px;
   color: rgb(250, 250, 250);
 }
-.our_service_card p {
+.approaches_card p {
   text-align: center;
   color: rgb(250, 250, 250);
 }
-.view_more_btn {
+/* .view_more_btn {
   display: flex;
   justify-content: center;
   align-items: center;
   text-decoration: none;
   text-align: center;
-  /* width: 50%; */
   font-size: 14px;
   font-weight: 600;
   letter-spacing: 1px;
@@ -150,7 +147,7 @@
   cursor: pointer;
   opacity: 1;
   z-index: 9999;
-}
+} */
 
 .our_service_card:hover {
   box-shadow: 5px 5xp 5px white;
