--- a/src/styles/globals.css
+++ b/src/styles/globals.css
@@ -494,6 +494,7 @@ nav.navbar.scrolled {
 
 /************ Projects Css ************/
 .portfolio {
+  padding: 30px 0 50px;
   background: linear-gradient(
     90deg,
     rgba(170, 54, 124, 0.5),
@@ -501,10 +502,15 @@ nav.navbar.scrolled {
   );
 }
 .project {
-  padding: 0;
+  padding: 30px 0 50px;
   position: relative;
   display: flex;
   justify-content: center;
+  background: linear-gradient(
+    90deg,
+    rgba(170, 54, 124, 0.5),
+    rgba(74, 47, 189, 0.5)
+  );
 }
 .project h2 {
   font-size: 40px;
@@ -648,6 +654,7 @@ nav.navbar.scrolled {
   opacity: 0;
   width: 100%;
   height: 100%;
+  padding: 20px;
   display: flex;
   flex-direction: column;
   justify-content: center;
@@ -698,12 +705,15 @@ nav.navbar.scrolled {
 /* ********** Testimonials *******   */
 
 .testimonials {
-  padding: 80px 0;
+  padding: 30px 0 50px;
   position: relative;
   margin: auto;
   text-align: center;
-  /* border-bottom: 1px solid white;
-  border-top: 1px solid white; */
+  background: linear-gradient(
+    90deg,
+    rgba(170, 54, 124, 0.5),
+    rgba(74, 47, 189, 0.5)
+  );
 
   display: flex;
   justify-content: center;
