--- a/src/styles/Services.module.css
+++ b/src/styles/Services.module.css
@@ -149,7 +149,7 @@
   z-index: 9999;
 } */
 
-.our_service_card:hover {
+.approaches_card:hover {
   box-shadow: 5px 5xp 5px white;
   transition: all ease-in-out 0.3s;
   /* box-shadow: 5px 5xp 5px white; */
