--- a/src/styles/globals.css
+++ b/src/styles/globals.css
@@ -430,6 +430,7 @@ nav.navbar.scrolled {
 /* Animation */
 .banner img {
   animation: updown 3s linear infinite;
+  background: transparent;
 }
 
 @keyframes updown {
@@ -1364,7 +1365,7 @@ nav.navbar.scrolled {
 /* Service Content Styling */
 .service-content {
   background: transparent;
-  padding: 20px;
+  margin: 20px 0;
   /* text-align: left; */
   letter-spacing: 1px;
 }
@@ -1401,14 +1402,36 @@ nav.navbar.scrolled {
   display: flex;
   justify-content: center;
   align-items: center;
+  width: 100%;
+  height: 300px;
+  border: 1px solid white;
+  overflow: hidden;
 }
 .service-img {
   display: flex;
   justify-content: end;
   align-items: center;
-  padding: 20px;
-  width: 450px;
-  height: auto;
+  /* padding: 20px; */
+  width: 100%;
+  height: 100%;
+  object-fit: cover;
+}
+
+/* Approaches */
+.ourApproaches {
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  margin: 60px 0;
+}
+.ourApproaches h3 {
+  font-size: 32px;
+  letter-spacing: 1px;
+  font-weight: 500;
+  margin: 30px 0;
+  text-align: center;
+  /* color: #eeeeee; */
 }
 .related-projects {
   margin-bottom: 60px;
