--- a/src/styles/Services.module.css
+++ b/src/styles/Services.module.css
@@ -30,7 +30,7 @@
 
 /* ------ Our Services -----*/
 
-.approaches {
+/* .service_section {
   padding: 30px 0 50px;
   position: relative;
   background: linear-gradient(
@@ -38,122 +38,4 @@
     rgba(170, 54, 124, 0.5),
     rgba(74, 47, 189, 0.5)
   );
-}
-
-.approaches h2 {
-  font-size: 40px;
-  font-weight: 700;
-  text-align: center;
-}
-
-.approaches p {
-  color: #b8b8b8;
-  font-size: 18px;
-  letter-spacing: 0.8px;
-  line-height: 1.5em;
-  margin: 10px auto;
-  text-align: center;
-  width: 70%;
-}
-
-/* Responsive adjustments */
-@media (max-width: 1023px) {
-  .approaches {
-    padding: 20px 0;
-  }
-  .approaches p {
-    width: 80%;
-    margin: 10px auto;
-    text-align: center;
-  }
-}
-
-@media (max-width: 767px) {
-  .approaches {
-    padding: 20px 0;
-  }
-
-  .approaches p {
-    width: 95%;
-    margin: 10px auto;
-    text-align: start;
-  }
-}
-
-/**** Our Services Card ****/
-
-.approaches_card_wrapper {
-  display: flex;
-  justify-content: center;
-  align-items: center;
-}
-.approaches_card {
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
-  width: 98%;
-  padding: 30px 5px;
-  margin: 10px 5px;
-  border-radius: 10px;
-  background: var(--bg-primary);
-}
-.approaches_card .img_wrapper {
-  width: 60px;
-  height: 50px;
-  overflow: hidden;
-  border-radius: 5px;
-}
-.approaches_card .img {
-  width: 100%;
-  height: 100%;
-  object-fit: cover;
-  border-radius: 5px;
-  margin-bottom: 10px;
-}
-.approaches_card h2 {
-  font-size: 24px;
-  font-weight: 500;
-  margin: 15px 0 0;
-  text-align: center;
-  letter-spacing: 1px;
-  color: rgb(250, 250, 250);
-}
-.approaches_card p {
-  text-align: center;
-  color: rgb(250, 250, 250);
-}
-/* .view_more_btn {
-  display: flex;
-  justify-content: center;
-  align-items: center;
-  text-decoration: none;
-  text-align: center;
-  font-size: 14px;
-  font-weight: 600;
-  letter-spacing: 1px;
-  color: #fff;
-  padding: 10px 20px;
-  margin: 10px 0;
-  border-radius: 5px;
-  border: 1px solid white;
-  background: transparent;
-  transition: 0.2s ease-in-out;
-}
-.view_more_btn:hover {
-  background-color: #fff;
-  color: #4a2fbd;
-  border: 1px solid #4a2fbd;
-  cursor: pointer;
-  opacity: 1;
-  z-index: 9999;
 } */
-
-.approaches_card:hover {
-  box-shadow: 5px 5xp 5px white;
-  transition: all ease-in-out 0.3s;
-  /* box-shadow: 5px 5xp 5px white; */
-  transform: translateY(-5px);
-  z-index: 1;
-  opacity: 0.8;
-}
