--- a/src/styles/approches.module.css
+++ b/src/styles/approches.module.css
@@ -55,7 +55,7 @@
   font-size: 18px;
   font-weight: 400;
   letter-spacing: 1px;
-  margin-top: -20px;
+  /* margin-top: px; */
 }
 
 .card:hover::before {
@@ -74,13 +74,17 @@
 }
 
 /* only on benifits card */
-
+.benifit_wrapper {
+  display: flex;
+  justify-content: center;
+  margin: auto;
+}
 .benifits {
   display: flex;
-  /* flex-direction: column; */
-  justify-content: space-around;
+  flex-direction: column;
+  justify-content: start;
   align-items: center;
-  margin: 20px 5px;
+  margin: 40px 5px;
   flex-wrap: wrap;
 }
 
@@ -89,5 +93,5 @@
   border-radius: 50%;
   padding: 5px;
   color: white;
-  margin: -10px;
+  margin: 10px 0;
 }
