--- a/src/styles/packages.module.css
+++ b/src/styles/packages.module.css
@@ -1,53 +1,166 @@
+.card_wrapper {
+  width: 95%;
+  margin: 10px 5px;
+}
 .card {
-  width: 190px;
-  height: 254px;
-  background: #07182e;
-  position: relative;
   display: flex;
-  place-content: center;
-  place-items: center;
-  overflow: hidden;
+  flex-direction: column;
+  /* align-items: center; */
+  justify-content: center;
+  width: 100%;
+  height: 100%;
+  padding-bottom: 30px;
+  line-height: normal;
+
+  background: linear-gradient(90deg, rgba(170, 54, 124), rgba(74, 47, 189));
+  /* color: #f0f0f0; */
+  border-top: 2px solid white;
   border-radius: 20px;
+  position: relative;
+  transition: all 0.7s ease-in-out;
+  overflow: hidden;
 }
 
-.card h2 {
-  z-index: 1;
+.card_header {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+  padding: 20px 10px 10px;
+  background-color: rgba(0, 0, 0, 0.568);
+}
+.card h3 {
+  font-size: 24px;
+  text-align: center;
+  font-weight: 500;
+  letter-spacing: 1px;
+  padding: 0 10px;
+  margin: 10px;
+  width: 100%;
+}
+
+.card p {
+  width: 90%;
+}
+
+.idealFor {
+  font-size: 16px;
+  text-align: center;
+  font-weight: 300;
+  letter-spacing: 1.2px;
+}
+.card_header p {
+  text-align: center;
+}
+
+.card .features {
+  display: flex;
+  justify-content: center;
+}
+.card ul {
+  list-style-type: none;
+  margin: 10px 5px;
+  padding: 10px;
+  width: 90%;
+}
+.card ul li {
+  display: flex;
+  width: 100%;
+  text-align: start;
+  line-height: normal;
+}
+
+.bullet {
+  margin-right: 15px;
+  font-size: 20px;
+
+  color: rgb(15, 255, 15);
+}
+.list_item_content {
+  font-size: 16px;
+}
+.list_heading {
+  /* font-size: 18px; */
+  font-weight: 500;
+  letter-spacing: 0.8px;
+  padding: 0 5px 0 0;
+  color: rgb(250, 250, 250);
+  display: inline;
+  /* white-space: nowrap; */
+}
+.list_item_content .desc {
+  font-size: 14px;
+  font-weight: 300;
+  letter-spacing: 0.8px;
+  padding: 0 5px 0 0;
+  color: rgb(240, 240, 240);
+}
+/* Prcing */
+.price_wrapper {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+}
+.price {
+  padding: 0 10px;
+  /* color: yellow; */
+  display: flex;
+  justify-content: center;
+  align-items: center;
+
+  /* margin: 0 -40px; */
+}
+
+.price .oldPrice,
+.newPrice {
+  /* text-decoration: line-through; */
+  /* font-size: 24px; */
+  font-weight: 300;
+  letter-spacing: 2px;
+  padding-left: 10px;
+  padding-right: 10px;
+}
+.oldPrice {
+  text-decoration: line-through;
+  font-size: 36px;
+  color: #fff;
+}
+.newPrice {
+  font-size: 48px;
+}
+.card .button_wrapper {
+  display: flex;
+  justify-content: center;
+}
+.button_wrapper .button {
+  text-decoration: none;
   color: white;
-  font-size: 2em;
+  font-size: 18px;
+  font-weight: 500;
+  letter-spacing: 1px;
+  background-color: blueviolet;
+  padding: 10px 20px;
+  margin: 20px 0;
+  border-radius: 5px;
+  border: 1px solid white;
+  text-align: center;
+  width: 50%;
 }
 
-.card::before {
-  content: "";
-  position: absolute;
-  width: 100px;
-  background-image: linear-gradient(
-    180deg,
-    rgb(0, 183, 255),
-    rgb(255, 48, 255)
-  );
-  height: 130%;
-  animation: rotBGimg 3s linear infinite;
-  transition: all 0.2s linear;
-}
-
-@keyframes rotBGimg {
-  from {
-    transform: rotate(0deg);
-  }
-
-  to {
-    transform: rotate(360deg);
+@media (width>1024px) {
+  .idealFor {
+    font-size: 20px;
   }
 }
 
-.card::after {
-  content: "";
-  position: absolute;
-  background: #07182e;
-  inset: 5px;
-  border-radius: 15px;
+@media (width<=992px) {
 }
-/* .card:hover:before {
-    background-image: linear-gradient(180deg, rgb(81, 255, 0), purple);
-    animation: rotBGimg 3.5s linear infinite;
-  } */
+
+@media (width<=768px) {
+}
+@media (width<=576px) {
+}
+
+@media (width<=425px) {
+}
