--- a/src/styles/packages.module.css
+++ b/src/styles/packages.module.css
@@ -1,3 +1,9 @@
+/* card row */
+
+.sub_packages {
+}
+
+/* card */
 .card_wrapper {
   width: 95%;
   margin: 10px 5px;
@@ -29,6 +35,7 @@
   padding: 20px 10px 10px;
   background-color: rgba(0, 0, 0, 0.568);
 }
+
 .card h3 {
   font-size: 24px;
   text-align: center;
@@ -123,11 +130,27 @@
 }
 .oldPrice {
   text-decoration: line-through;
-  font-size: 36px;
+  font-size: 32px;
   color: #fff;
 }
 .newPrice {
-  font-size: 48px;
+  font-size: 40px;
+}
+.customPrice span {
+  font-size: 20px;
+  font-weight: 300;
+  letter-spacing: 1px;
+  padding-left: 10px;
+  color: #f3f3f3;
+  display: block;
+  width: 90%;
+  margin: auto;
+}
+.customPrice h3 {
+  font-size: 28px;
+  color: yellow;
+  font-weight: 500;
+  letter-spacing: 1px;
 }
 .card .button_wrapper {
   display: flex;
@@ -163,4 +186,8 @@
 }
 
 @media (width<=425px) {
+  .price {
+    display: flex;
+    flex-direction: column;
+  }
 }
