--- a/src/styles/globals.css
+++ b/src/styles/globals.css
@@ -958,9 +958,14 @@ nav.navbar.scrolled {
   background: linear-gradient(90.21deg, #aa367c -5.91%, #4a2fbd 111.58%);
   padding: 40px 0 200px 0;
 }
+.img-section {
+  display: flex;
+  justify-content: center;
+}
 .contact .img_wrapper {
-  width: 400px;
-  height: 400px;
+  width: 300px;
+  height: 300px;
+  margin-top: 40px;
 }
 .contact img {
   width: 100%;
@@ -1043,6 +1048,9 @@ nav.navbar.scrolled {
   .img-section {
     order: 2;
     /* background-color: red; */
+  }
+  .contact form button {
+    margin: 20px auto;
   }
 }
 
