--- a/src/styles/globals.css
+++ b/src/styles/globals.css
@@ -626,7 +626,7 @@ nav.navbar.scrolled {
   /* filter: blur(5px); */
 }
 .project-img {
-  animation: updown 5s linear infinite;
+  /* animation: updown 5s linear infinite; */
   /* border-radius: 30px; */
   width: 100%;
   height: 400px;
@@ -1024,6 +1024,7 @@ nav.navbar.scrolled {
   z-index: 1;
   position: relative;
 }
+
 .contact form button:hover {
   /* color: #fff; */
   background: linear-gradient(90.21deg, #971864 -5.91%, #2f1797 111.58%);
