--- a/src/styles/about-us.module.css
+++ b/src/styles/about-us.module.css
@@ -24,13 +24,14 @@
   margin-top: 10px;
 }
 .our_company p {
-  width: 60%;
+  width: 80%;
   text-align: center;
-  letter-spacing: 1px;
+  letter-spacing: 1.2px;
+  line-height: 22px;
 }
-.our_aim {
+.our_company p span {
   color: yellow;
-  font-weight: 700;
+  font-weight: 500;
   font-size: 18px;
 }
 
@@ -179,13 +180,13 @@
 
 @media (width<=768px) {
   .our_company p {
-    width: 80%;
+    width: 90%;
     text-align: center;
   }
 }
 @media (width<576px) {
   .our_company p {
-    width: 90%;
+    width: 95%;
     text-align: start;
   }
 }
