--- a/src/styles/globals.css
+++ b/src/styles/globals.css
@@ -368,6 +368,15 @@ nav.navbar.scrolled {
 }
 
 /************ Banner Css ************/
+.banner-wrapper {
+  position: relative;
+}
+.top-line {
+  position: absolute;
+  top: 4%;
+  left: 9%;
+  color: yellow;
+}
 /* Banner */
 .banner {
   margin-top: 0;
@@ -517,7 +526,7 @@ nav.navbar.scrolled {
   font-size: 40px;
   font-weight: 700;
   text-align: center;
-  margin-bottom: 20px;
+  padding: 50px 0 30px;
 }
 .project p {
   color: #b8b8b8;
@@ -706,8 +715,8 @@ nav.navbar.scrolled {
 /* ********** Testimonials *******   */
 
 .testimonials {
-  padding: 30px 0 50px;
-  position: relative;
+  padding: 30px 0 80px;
+  /* position: relative; */
   margin: auto;
   text-align: center;
   background: linear-gradient(
@@ -752,7 +761,10 @@ nav.navbar.scrolled {
   background-repeat: repeat;
   background-image: url("data:image/svg+xml;utf8,%3Csvg viewBox=%220 0 1000 1000%22 xmlns=%22http:%2F%2Fwww.w3.org%2F2000%2Fsvg%22%3E%3Cdefs%3E%3CradialGradient id=%22b%22 r=%22100%25%22 cx=%2250%25%22 cy=%2250%25%22%3E%3Cstop offset=%220%25%22 stop-color=%22%23FF3CAC%22%2F%3E%3Cstop offset=%2250%25%22 stop-color=%22%23784BA0%22%2F%3E%3Cstop offset=%22100%25%22 stop-color=%22%232b86c5%22%2F%3E%3C%2FradialGradient%3E%3CclipPath id=%22a%22%3E%3Cpath fill=%22currentColor%22 d=%22M668 604q-168 104-414 0t0-341q246-237 414 0t0 341Z%22%2F%3E%3C%2FclipPath%3E%3C%2Fdefs%3E%3Cg clip-path=%22url(%23a)%22%3E%3Cpath fill=%22url(%23b)%22 d=%22M668 604q-168 104-414 0t0-341q246-237 414 0t0 341Z%22%2F%3E%3C%2Fg%3E%3C%2Fsvg%3E");
 }
-
+.testimonial_card {
+  border-radius: 20px;
+  /* height: 300px; */
+}
 .userImage_wrapper {
   margin-bottom: -30px;
   /* box-shadow: 10 10 0px rgba(128, 128, 128, 0.5); */
@@ -773,24 +785,54 @@ nav.navbar.scrolled {
   z-index: 99999;
 }
 .content {
-  padding: 20px;
+  padding: 10px 20px;
   border-radius: 3%;
   border-bottom: 2px solid whitesmoke;
   border-right: 2px solid whitesmoke;
-
+  height: 300px;
   color: whitesmoke;
   background: linear-gradient(to right, #7f3399, transparent);
 }
 .content .desc {
   font-size: 18px;
-  letter-spacing: 0.8px;
+  letter-spacing: 1.2px;
 }
-.content .designation {
+.quotation_mark {
+  font-size: 24px;
+  font-weight: 700;
+  letter-spacing: 0.8px;
+  line-height: 1.1em;
+  color: rgba(255, 255, 0, 0.9);
+  /* position: absolute; */
+}
+.quotation-mark-start {
+  padding-right: 10px;
+}
+.quotation-mark-end {
+  padding-left: 10px;
+  display: inline;
+  margin-left: auto;
+  /* float: right; */
+}
+.client_name {
+  font-size: 18px;
+  font-weight: 4 00;
+  letter-spacing: 0.8px;
+  line-height: 1.1em;
+  color: #f1f1f1;
+  font-style: italic;
+  /* margin-top: auto; */
+}
+/* .content .designation {
   font-size: 18px;
   font-weight: 600;
   letter-spacing: 0.8px;
+} */
+@media (width<=1024px) {
+  .content {
+    height: 370px;
+  }
 }
-
 @media (max-width: 768px) {
   .testimonials {
     padding: 40px 0;
@@ -826,7 +868,7 @@ nav.navbar.scrolled {
   }
 
   .testimonials .content {
-    padding: 10px;
+    padding: 15px;
   }
 
   .testimonials .designation {
@@ -861,6 +903,20 @@ nav.navbar.scrolled {
   }
 }
 
+@media (width<=425px) {
+  .content {
+    /* height: 300px; */
+    padding: 0 20px;
+  }
+  .content .desc {
+    padding: 0 10px;
+  }
+}
+@media (width<=375px) {
+  .content {
+    height: 400px;
+  }
+}
 /************ Blog Css ************/
 
 .blogsComponent {
@@ -1044,6 +1100,23 @@ nav.navbar.scrolled {
 .contact form button:hover::before {
   width: 100%;
 }
+.nav-contact {
+  display: flex;
+  /* flex-direction: column; */
+  justify-content: center;
+  align-items: center;
+}
+.nav-phone-number {
+  color: #eee;
+  letter-spacing: 2px;
+  font-size: 18px;
+  font-weight: 700;
+  transition: all ease 0.3s;
+  /* border-bottom: 1px solid white; */
+}
+.nav-phone-number:hover {
+  scale: 1.1;
+}
 
 @media (width<=768px) {
   .img-section {
@@ -1053,8 +1126,39 @@ nav.navbar.scrolled {
   .contact form button {
     margin: 20px auto;
   }
+  .nav-contact {
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+  }
+  .nav-phone-number {
+    font-size: 16px;
+  }
 }
 
+@media (width<=425px) {
+  .nav-contact {
+    flex-direction: row;
+  }
+  .nav-contact .nav-phone-number {
+    order: 2;
+    padding: 10px;
+    margin: 10px;
+  }
+}
+
+@media (width<=375px) {
+  .nav-contact {
+    flex-direction: column;
+  }
+  .nav-contact .nav-phone-number {
+    order: -1;
+    /* padding: 10px; */
+    /* margin: 10px; */
+    margin: 0;
+  }
+}
 /************ Footer Css ************/
 .footer {
   padding: 60px 0 40px 0;
