--- a/src/styles/Services.module.css
+++ b/src/styles/Services.module.css
@@ -39,3 +39,40 @@
     rgba(74, 47, 189, 0.5)
   );
 } */
+
+/* add ons section */
+
+.add_ons {
+  margin: 20px 10px 50px;
+}
+.add_ons h3 {
+  font-size: 28px;
+  font-weight: 400;
+  letter-spacing: 1px;
+}
+
+.add_ons ul {
+  list-style-type: none;
+}
+.add_ons ul li {
+  padding: 5px;
+  font-size: 18px;
+  margin-left: 5px;
+}
+.add_ons .title {
+  font-size: 20px;
+  font-weight: 500;
+  color: #fff;
+  margin-right: 10px;
+}
+
+.add_ons .desc {
+  font-size: 18px;
+  font-weight: 300;
+  color: #eee;
+}
+.list_item {
+  display: flex;
+  /* justify-content: center; */
+  align-items: center;
+}
