--- a/src/styles/packages.module.css
+++ b/src/styles/packages.module.css
@@ -81,7 +81,7 @@
   margin-right: 15px;
   font-size: 20px;
 
-  color: rgb(15, 255, 15);
+  color: hsl(120, 100%, 53%);
 }
 .list_item_content {
   font-size: 16px;
