--- a/src/styles/globals.css
+++ b/src/styles/globals.css
@@ -322,7 +322,6 @@ nav.navbar .navbar-toggler[aria-expanded="true"] .navbar-toggler-icon {
   background-color: black;
 }
 .nav-linknavbarlink {
-  color: #f80f0f !important;
   text-decoration: none;
   white-space: nowrap;
   overflow: hidden;
@@ -360,7 +359,23 @@ nav.navbar .navbar-toggler[aria-expanded="true"] .navbar-toggler-icon {
     
   } */
 }
-
+.refer_button {
+  text-decoration: none;
+  color: #eee;
+  font-size: 18px;
+  font-weight: 500;
+  letter-spacing: 1px;
+  /* border-top: 1px solid white; */
+  padding: 6px 12px;
+  margin-top: 20px;
+  border-radius: 5px;
+  background: linear-gradient(90.21deg, #aa367c -5.91%, #4a2fbd 111.58%);
+  transition: all ease-in-out 0.3s;
+}
+.refer_button:hover {
+  background: linear-gradient(90.21deg, #971864 -5.91%, #2f1797 111.58%);
+  scale: 1.1;
+}
 /* Scrolled navbar background color */
 nav.navbar.scrolled {
   padding: 0px 0;
@@ -1013,22 +1028,30 @@ nav.navbar.scrolled {
 .img-section {
   display: flex;
   justify-content: center;
+  align-items: center;
 }
 .contact .img_wrapper {
-  width: 300px;
-  height: 300px;
+  width: 80%;
+  height: 80%;
+  border-radius: 10px;
+  overflow: hidden;
   margin-top: 40px;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  margin: 20px auto;
 }
 .contact img {
   width: 100%;
   height: 100%;
+  border-radius: 10px;
 }
 .contact h2 {
   font-size: 45px;
   font-weight: 700;
   margin-bottom: 30px;
 }
-.contact form input,
+.contact form .input,
 .contact form textarea {
   width: 100%;
   background: rgba(255, 255, 255, 0.1);
@@ -1042,22 +1065,50 @@ nav.navbar.scrolled {
   letter-spacing: 0.8px;
   transition: 0.3s ease-in-out;
 }
-.contact form input:focus,
+.contact form .input:focus,
 .contact form textarea:focus {
   background: rgba(255, 255, 255, 1);
   color: #121212;
 }
 
-.contact form input::placeholder,
+.contact form .input::placeholder,
 .contact form textarea::placeholder {
   font-size: 16px;
   font-weight: 400;
   color: #fff;
 }
-.contact form input:focus::placeholder,
+.contact form .input:focus::placeholder,
 .contact form textarea:focus::placeholder {
   color: #121212;
   opacity: 0.8;
+}
+.referal-code-check {
+  display: flex;
+  /* justify-content: center; */
+  /* align-items: center; */
+  margin: 10px 0;
+}
+.referal-code-check input {
+  /* width: 100%; */
+  background: rgba(255, 255, 255, 0.1);
+  border: 1px solid rgba(255, 255, 255, 0.5);
+  border-radius: 20px;
+  color: #fff;
+  margin: 0 0 8px 0;
+  padding: 14px 22px;
+  font-weight: 500;
+  font-size: 18px;
+  letter-spacing: 0.8px;
+}
+
+.referal-code-check label {
+  font-size: 16px;
+  font-weight: 400;
+  color: #fff;
+  margin-left: 10px;
+  cursor: pointer;
+  transition: 0.3s ease-in-out;
+  margin-top: 10px;
 }
 .contact form button {
   font-weight: 700;
