--- a/src/styles/globals.css
+++ b/src/styles/globals.css
@@ -1028,29 +1028,37 @@ nav.navbar.scrolled {
 
 .contact {
   background: linear-gradient(90.21deg, #aa367c -5.91%, #4a2fbd 111.58%);
-  padding: 40px 0 200px 0;
+  padding: 40px 0 150px 0;
 }
 .img-section {
   display: flex;
-  justify-content: center;
+  justify-content: start;
   align-items: center;
 }
 .contact .img_wrapper {
-  width: 80%;
-  height: 80%;
+  width: 100%;
+  height: 100%;
   border-radius: 10px;
-  overflow: hidden;
-  margin-top: 40px;
+  /* overflow: hidden; */
+  margin-top: 10px;
   display: flex;
-  justify-content: center;
-  align-items: center;
-  margin: 20px auto 20px 0;
+  /* justify-content: center; */
+  align-items: start;
+  margin-right: 40px;
+}
+@media (width<=576px) {
+  .contact .img_wrapper {
+    margin: 20px auto 20px 0;
+  }
 }
 .contact img {
   width: 100%;
   height: 100%;
   border-radius: 10px;
+  /* margin-right: auto; */
+  animation: updown 3s linear infinite;
 }
+
 .contact h2 {
   font-size: 45px;
   font-weight: 700;
