--- a/src/styles/Refer.module.css
+++ b/src/styles/Refer.module.css
@@ -4,3 +4,18 @@
   width: 98%;
   margin: auto;
 }
+.copy_button {
+  background: linear-gradient(90deg, rgba(170, 54, 124), rgba(37, 14, 138));
+  color: #fff;
+  border: none;
+  border-radius: 5px;
+  padding: 10px 20px;
+  cursor: pointer;
+  font-size: 14px;
+  font-weight: 600;
+  letter-spacing: 1px;
+  /* text-transform: uppercase; */
+}
+.copy_button:hover {
+  background: linear-gradient(90deg, rgba(133, 25, 90), rgba(32, 14, 112));
+}
