--- a/src/styles/globals.css
+++ b/src/styles/globals.css
@@ -549,7 +549,7 @@ nav.navbar.scrolled {
   padding: 50px 0 30px;
 }
 .project p {
-  color: #b8b8b8;
+  color: #eee;
   font-size: 18px;
   letter-spacing: 0.8px;
   line-height: 1.5em;
@@ -765,7 +765,7 @@ nav.navbar.scrolled {
 }
 
 .testimonials p {
-  color: #f1f1f1;
+  color: #eee;
   font-size: 18px;
   letter-spacing: 0.8px;
   line-height: 1.5em;
@@ -1036,8 +1036,8 @@ nav.navbar.scrolled {
   align-items: center;
 }
 .contact .img_wrapper {
-  width: 100%;
-  height: 100%;
+  width: 450px;
+  height: 450px;
   border-radius: 10px;
   /* overflow: hidden; */
   margin-top: 10px;
@@ -1049,6 +1049,10 @@ nav.navbar.scrolled {
 @media (width<=576px) {
   .contact .img_wrapper {
     margin: 20px auto 20px 0;
+  }
+  .contact .img_wrapper {
+    width: 300px;
+    height: 300px;
   }
 }
 .contact img {
@@ -1188,6 +1192,9 @@ nav.navbar.scrolled {
 .css-1jqq78o-placeholder {
   background-color: transparent;
   color: #eee;
+}
+.form-check-input {
+  color: #160561;
 }
 @media (width<=768px) {
   .img-section {
@@ -1486,6 +1493,14 @@ nav.navbar.scrolled {
 }
 .service-page-inner {
   width: 95%;
+}
+.service {
+  padding: 50px 0 0;
+}
+@media (width<=768) {
+  .service {
+    margin: 50px 0 0;
+  }
 }
 .service-header .title {
   font-size: 32px;
