--- a/src/styles/packages.module.css
+++ b/src/styles/packages.module.css
@@ -5,7 +5,7 @@
 
 /* card */
 .card_wrapper {
-  width: 95%;
+  width: 98%;
   margin: 10px 5px;
 }
 .card {
@@ -46,6 +46,13 @@
   width: 100%;
 }
 
+.package_name {
+  /* margin: 50px 0 30px; */
+  text-align: center;
+}
+.sub_packages_row {
+  padding: 30px 0 50px;
+}
 .card p {
   width: 90%;
 }
@@ -156,6 +163,7 @@
 .card .button_wrapper {
   display: flex;
   justify-content: center;
+  width: 100%;
 }
 .button_wrapper .button {
   text-decoration: none;
