--- a/src/styles/ui/get-now-btn.module.css
+++ b/src/styles/ui/get-now-btn.module.css
@@ -1,17 +1,18 @@
 .button_wrapper {
-  min-width: 40%;
+  /* min-width: 40%; */
+  margin: 20px 0;
 }
 .button {
-  padding: 12px 25px;
-  margin: 10px 0;
+  padding: 13px 48px;
   border-radius: 50px;
-  width: 100%;
+  text-decoration: none;
   border: 1px solid rgb(245, 245, 245);
   font-size: 16px;
   /* text-transform: uppercase; */
   font-weight: 600;
   letter-spacing: 1px;
-  background: transparent;
+  /* background: transparent; */
+  background: linear-gradient(90.21deg, #b8267e -5.91%, #3c23ac 111.58%);
   color: #fff;
   overflow: hidden;
   box-shadow: 0 0 0 0 transparent;
